--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container-fluid" id="about-content">
+    <div class="container-fluid" id="about-container">
         
         <header>
             <!--navbar-->
@@ -41,13 +41,10 @@
                 </div>
               </nav>
               
+              <div class="navbar-block"></div>
         </header>
 
-        <section id="about-info">
-
-
-
-
+        <section id="about-content">
 
 
         </section>
