added carousel to home page

--- a/index.html
+++ b/index.html
@@ -80,6 +80,35 @@
               <div class="navbar-block"></div>
         </header>
 
+        <div id="HomeCarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="slide-one-text">
+                    <h1>Compute.</h1>
+                    <h1>Calculate.</h1>
+                    <h1 class="punchline">Communicate.</h1>
+                </div>
+                <img class="slide-one-img img-fluid" src="assets/working man.png" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <div class="slide-two-text">
+                   <h4>Computer Issues?</h4>
+                   <h2>We're here to help</h2>
+                   <h5>For over 10 years, our experts have been troubelshooting computer-related issues. We are commited to customer satisfaction.</h5>
+                </div>
+                <img class="slide-two-img img-fluid" src="assets/computers.png" alt="Second slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#HomeCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#HomeCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+        </div>
+
         <section id="home-intro">
             <div class="left">
                 <div class="content-wrapper">
@@ -87,14 +116,14 @@
                     <br>
                     <h4>Our goal at BinarySupport is simple. Provide families and services with the best computer services available today. We provide a wide range of services. Click below for more info: </h4>
                     <br>
-                    <button type="button" data-toggle="button" class="btn btn-secondary btn-lg">Learn More</button>
+                    <button type="button" data-toggle="button" class="btn secondary-button btn-lg">Learn More</button>
                 </div>
             </div>
             <div class="right">
-                <div class="preview-box">
-                    <h2>Want to get in touch?</h2>
-                    <img src="assets/clock.png" class="img-fluid">
-                    <button type="button" data-toggle="modal" data-target="#contactModal" class="btn btn-secondary btn-lg">Contact Us</button>
+                <div class="media-box">
+                    <h2>What is Citrix?</h2>
+                    <iframe height="315" src="https://www.youtube.com/embed/WLn8JzRc4XE" class="media" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <button type="button" data-toggle="modal" data-target="#contactModal" class="btn secondary-button btn-lg">Contact Us</button>
                 </div>
             </div>
         </section>
