contact page and home page touch-ups

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="slide-two-text">
                    <h4>Computer Issues?</h4>
                    <h2>We're here to help</h2>
-                   <h5>For over 10 years, our experts have been troubelshooting computer-related issues. We are commited to customer satisfaction.</h5>
+                   <a href="services.html"><h5>Our Services</h5><i class="fa fa-caret-right" aria-hidden="true"></i></a>
                 </div>
                 <img class="slide-two-img img-fluid" src="assets/computers.png" alt="Second slide">
               </div>
@@ -116,7 +116,7 @@
                     <br>
                     <h4>Our goal at BinarySupport is simple. Provide families and services with the best computer services available today. We provide a wide range of services. Click below for more info: </h4>
                     <br>
-                    <button type="button" data-toggle="button" class="btn secondary-button btn-lg">Learn More</button>
+                    <a href="about.html"><button type="button" class="btn secondary-button btn-lg">Learn More</button></a>
                 </div>
             </div>
             <div class="right">
@@ -129,11 +129,19 @@
         </section>
 
         <section id="client-list">   
-            <h5>Previous Clients</h5>
-            <div class="company-wrapper">
-                <img  src="assets/tdbank.jpg" class="img-fluid client">
-                <img  src="assets/rbcbank.jpg" class="img-fluid client">
-                <img  src="assets/compucom.png" class="img-fluid client">
+            <h4>Previous Clients</h4>
+            <hr>
+            <div class="companies-wrapper">
+                <img src="assets/tdbank.jpg" class="img-fluid client">
+                <img src="assets/rbcbank.jpg" class="img-fluid client">
+                <img src="assets/compucom.png" class="img-fluid client">
+                <img src="assets/trinity-logo.jpg" class="img-fluid client">
+                <img src="assets/microsoft-logo.jpg" class="img-fluid client">
+                <img src="assets/IBM-logo.jpg" class="img-fluid client">
+                <img src="assets/az-logo.png" class="img-fluid client">
+                <img src="assets/acto-logo.svg" class="img-fluid client">
+                <img src="assets/bmo-logo.png" class="img-fluid client">
+                <img src="assets/citrix-logo.png" class="img-fluid client">
             </div>
         </section>
 
