about page complete

--- a/about.html
+++ b/about.html
@@ -45,8 +45,48 @@
         </header>
 
         <section id="about-content">
+          <div class="mission-wrapper">
+            <h1>Our Mission</h1>
+            <h4>Praesent aliquet laoreet tellus quis gravida. Nam sagittis ipsum est, a viverra velit congue sit amet. Nulla eget dictum massa</h4>
+          </div>
 
+          <div class="focus-icons">
+            <div class="icon">
+              <i class="fa fa-diamond" aria-hidden="true"></i>
+              <h3>Quality</h3>
+              <h6>Praesent aliquet laoreet tellus quis gravida</h6>
+            </div>
+            <div class="icon">
+              <i class="fa fa-balance-scale" aria-hidden="true"></i>
+              <h3>Balenced</h3>
+              <h6>Praesent aliquet laoreet tellus quis gravida</h6>
+            </div>
+            <div class="icon">
+              <i class="fa fa-life-ring" aria-hidden="true"></i>
+              <h3>Focused</h3>
+              <h6>Praesent aliquet laoreet tellus quis gravida</h6>
+            </div>
+            <div class="icon">
+              <i class="fa fa-hourglass-half" aria-hidden="true"></i>
+              <h3>Fast</h3>
+              <h6>Praesent aliquet laoreet tellus quis gravida</h6>
+            </div>     
+          </div>
 
+          <div class="team-wrapper">
+            <img class="bg" src="assets/binary-bg.jpg">
+            <img class="portrait" src="assets/dad transparent.png">
+            <div class="dad-description">
+              <h3>Gebriel Tamiru</h3>
+              <h5>Founder & CEO</h5>
+              <hr>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+            </div>
+          </div>
+          <article class="company-history">
+            <h2>Our History</h2>
+            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.<br><br>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.<br>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.<br>Mauris non lorem finibus, tincidunt eros ac, fermentum libero. Vestibulum justo diam, sagittis quis leo vel, placerat euismod ipsum. Pellentesque pretium ut dui ac aliquet. Integer bibendum bibendum leo vel feugiat. Sed semper, dui vitae congue venenatis, lectus elit pulvinar leo, in eleifend sem urna non ipsum.</p>
+          </article>
         </section>
 
         <footer>
@@ -65,5 +105,10 @@
         </footer>
     
     </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
