font and variable change

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
             </div>
             <div class="icon">
               <i class="fa fa-balance-scale" aria-hidden="true"></i>
-              <h3>Balenced</h3>
+              <h3>Balanced</h3>
               <h6>Praesent aliquet laoreet tellus quis gravida</h6>
             </div>
             <div class="icon">
