--- a/services.html
+++ b/services.html
@@ -45,8 +45,106 @@
         </header>
 
         <section id="services-content">
-         
+          <div class="service-intro">
+            <h1>Here's what you can expect from us</h1>
+            <img src="assets/tech-support-2.png">
+          </div>
+          <div class="services-strip">
+            <h2>Main Services</h2>
+          </div>
 
+          <div class="service-grid">
+            <div class="card">
+              <img class="card-img-top" src="assets/services/computer.jpeg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Setup, Configure and Debug Computers/Applicaations</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">Learn More</a>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="assets/services/lan.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Design and Configure secure LANs</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">Learn More</a>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="assets/services/business solutions.jpeg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Small Business Solutions</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">Learn More</a>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="assets/services/sending-emails.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Email and Collaboration</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">Learn More</a>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="assets/services/dynamic web development.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Design Dynamic Websites for your Needs</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">Learn More</a>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="assets/services/24-hour-Customer-Support.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Quality 24/7 Support</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">Learn More</a>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="services-strip">
+            <h4>Other Services</h4>
+          </div>
+          <div class="additional-service-grid">
+            <div class="card">
+              <img class="card-img-top" src="assets/services/spyware.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Spyware and Virus Removal</h5>
+                <p class="card-text">Some quick example text to build on the card title</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="assets/services/computer-performance.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Performance Tuning</h5>
+                <p class="card-text">Some quick example text to build on the card title</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="assets/services/hardware-consulting.jpeg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Consulting on Hardware & Software Companies</h5>
+                <p class="card-text">Some quick example text to build on the card title</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="assets/services/album-sharing.jpeg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Setting up and Sharing online albums</h5>
+                <p class="card-text">Some quick example text to build on the card title</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="assets/services/computer-coaching.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Coaching and Training</h5>
+                <p class="card-text">Some quick example text to build on the card title</p>
+              </div>
+            </div>
+          </div>
         </section>
 
         <footer>
